--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,9 @@
 services:
   my-page:
-    image: my-page
+    image: mypage
     container_name: c1
     build: .
     ports:
       - '443:443'
+    volumes:
+      - /etc/letsencrypt:/etc/letsencrypt
