changes for cloudflare tunnel

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "ENV=PROD node server.js",
+    "start": "node server.js",
     "dev": "node --watch server.js"
   },
   "keywords": [],
