--- a/DeployServer/compose.yaml
+++ b/DeployServer/compose.yaml
@@ -5,3 +5,6 @@ services:
     build: .
     ports:
       - '8080:8080'
+    volumes:
+      - /home/jason5/my-page:/home/jason5/my-page
+    working_dir: /home/jason5/my-page
